--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -37,7 +37,7 @@
 	margin-top: 25px;
 	margin-left: 450px;
 	border: solid 2px #ff9000;
-
+	border-radius: 8px;
 }
 .signupheader {
 	margin: 0 auto;
@@ -98,9 +98,9 @@
     font-weight:bolder;
     margin-left: 140px;
     margin-top: 10px;
-    height: 32px;
+    height: 40px;
 	width: 75px;
-	justify-content: center;
+	text-align: center;
 }
 .signupbtn:hover{
 	background:#ffffff;
