--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -15,7 +15,7 @@
         <h1>Sign In Here </h1>
     
     </header>
-        <form method="post" action="" class="signupform" >
+        <form class="signupform" >
       
         <div class="signupfield-prepend">
             <span class="signupform-addon"><i class="fa fa-envelope fa-2x"></i></span>
