--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -39,7 +39,7 @@
 	position: inherit;
 	margin-top: 25px;
 	margin-left: 445px;
-	
+	border-radius: 8px;
 
 }
 .signupheader {
@@ -74,6 +74,7 @@
 	float:left;
 	padding:8px;
 	width:10%;
+	height: 18px;
 	background: transparent;
 	text-align:center;
 	align-self: center;	
