--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -17,7 +17,7 @@
     <h1>Sign Up Here </h1>
 
 </header>
-    <form method="post" action="" class="signupform" (ngSubmit)="signupForm()">
+    <form >
     <div class="signupfield-prepend">
         <span class="signupform-addon"><i class="fa fa-envelope fa-2x"></i></span>
         <input
