mat theme corrections

--- a/src/app/navigation/header/header.component-theme.scss
+++ b/src/app/navigation/header/header.component-theme.scss
@@ -9,6 +9,11 @@
     .header-container{
         background-color: mat-color($primary);
     }
+
+    .btn{
+        color: white;
+        background-color: mat-color($accent);
+    }
     
    
 }
