--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -15,6 +15,10 @@
 	height: 100px;
 	width: 100px;
 }
+.home-btn{
+	height: 100px;
+	width: 100px;
+}
 .close { 
     position: absolute; 
     right: 35px; 
