--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,7 +3,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <div class="logo-container">
             <div fxLayout="column" fxLayoutAlign= "left">
-                <img class="logo" src="/assets/images/logo.png" >
+                <span class="home-btn" routerLink="/"><img class="logo" src="/assets/images/logo.png" ></span>
             </div> 
             <div fxLayout="column" fxLayoutAlign= "right">
                     <button mat-icon-button class="close" (click)="backClicked()">x</button>
