--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -19,6 +19,9 @@
 	height: 100px;
 	width: 100px;
 }
+.home-btn:hover{
+	border: solid 2px #ff9000; 
+}
 .close { 
     position: absolute; 
     right: 35px; 
