--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,3 +1,14 @@
-<p>
-  dashboard works!
-</p>
+<mat-toolbar  class="header-container" color ="primary"  >
+        <div class="logo-container">
+            <div fxLayout="row" fxLayoutAlign= "center center">
+                <div fxLayout="column" fxLayoutAlign= "center center">
+                    <img class="logo" src="/assets/images/logo.png" >
+                  </div>
+                  <div fxLayout="column" fxLayoutAlign= "right center">
+                    <a class="mytab" >
+                    Log out
+                  </a>
+                </div>
+             </div>
+        </div>
+</mat-toolbar>
