--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -89,8 +89,7 @@
 
 .signupformfield {
 	color:#0e0923; 
-	background:#FFFFFF;
-	border-color: #fafafa;
+	border-color: #ff9000;
 	padding:10.5px;
 	width:65%;
 	height: 15px;
