--- a/src/app/food-items/add-food-item/add-food-item.component.css
+++ b/src/app/food-items/add-food-item/add-food-item.component.css
@@ -14,3 +14,31 @@ div.validation-error{
 table.table-hover tbody tr:hover{
     cursor: pointer;
 }
+
+.display-4{
+    font-weight:bolder;
+    margin-left: 35%;
+    color: #0e0923;
+    margin-bottom: 4%;
+}
+
+
+
+
+.form-control{
+    width: 45%;
+    height: 50px;
+    margin-left: 28%;
+    margin-bottom: 0.5%;
+    border-radius: 5px;
+}
+
+.btn{
+    background-color: orangered;
+    color: white;
+    font-weight: bolder;
+    border-radius: 5px;
+    margin-left: 45%;
+    height: 35px;
+    margin-top: 2%;
+}
