--- a/src/app/food-items/food-item/food-item.component.html
+++ b/src/app/food-items/food-item/food-item.component.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
@@ -22,7 +20,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s4">
-      <img src="/assets/dashboard/admin.png" class="w3-circle w3-margin-right" style="width:46px">
+      <img src="/assets/images/admin.png" class="w3-circle w3-margin-right" style="width:46px">
     </div>
     <div class="w3-col s8 w3-bar">
       <span>Welcome, <strong>Admin</strong></span><br>
@@ -37,8 +35,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <div class="w3-bar-block">
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-    <a  class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
-    <a [routerLink]="'/foods'" class="w3-bar-item w3-button w3-padding" ><i class="fa fa-users fa-fw"></i>  Students Register</a>
+    <a  [routerLink]="'/admin'"class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Dashboard</a>
+    <a [routerLink]="'/foods'" class="w3-bar-item w3-button w3-padding" ><i class="fa fa-users fa-fw"></i>  Food Menu</a>
     <a  class="w3-bar-item w3-button w3-padding" (click)="attendanceLogin()"><i class="fa fa-eye fa-fw"></i>  Attendance</a>
     <a  class="w3-bar-item w3-button w3-padding" (click)="yearPlanLogin()"><i class="fa fa-bullseye fa-fw"></i>  Year Plan</a>
     <a  class="w3-bar-item w3-button w3-padding" (click)="adminForumLogin()"><i class="fa fa-book fa-fw"></i>  Forum</a>
@@ -55,62 +53,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px;margin-top:43px;">
-
-  <!-- Header -->
-  <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
-  </header>
-
-  <div class="w3-row-padding w3-margin-bottom">
-    <div class="w3-quarter">
-      <div class="w3-container w3-red w3-padding-16">
-        <div class="w3-left"><i class="fa fa-comment w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3>52</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Forum Posts</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-blue w3-padding-16">
-        <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3>99</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Staff</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-teal w3-padding-16">
-        <div class="w3-left"><i class="fa fa-share-alt w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3>23</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Shares</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container w3-orange w3-text-white w3-padding-16">
-        <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3>50</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Students</h4>
-      </div>
-    </div>
-  </div>
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6"><app-add-food-item></app-add-food-item></div>
     <div class="col-md-3"></div>
   </div>
-  <hr style="border: 3px dashed blueviolet;">
+  <hr style="border: 2px dashed orangered;">
  
-
+  <app-list-food-item></app-list-food-item>
   
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
