--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,21 +1,21 @@
 
 .footer-container{
-	height: 250px;
+	height: 35%;
 	font-size: 15px;
 }
 
 .text-center{
-	margin-left: 85px;
+	margin-left: 5%;
 	text-align: center;
 }
 
 .text-center_2{
-	margin-left: 350px;
+	margin-left: 27%;
 	text-align: center;
 }
 
 .text-center_3{
-	margin-left: 400px;
+	margin-left: 30%;
 	
 }
 
