--- a/src/app/navigation/navtabs/navtabs.component.css
+++ b/src/app/navigation/navtabs/navtabs.component.css
@@ -4,14 +4,13 @@
 }
 .btn{
     margin-left: 10px;
-    margin-right: 10px;
     font-weight: bolder;
     color: white;
     background-color: #ff9000;
 
 }
 .btn_group{
-    margin-left: 160px;
+    margin-left: 6%;
 }
 
 .mytab{
