--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -42,7 +42,7 @@
 	height: 350px;
 	position: inherit;
 	margin-top: 25px;
-	margin-left: 450px;
+	margin-left: 32%;
 	border: solid 2px #ff9000;
 	border-radius: 8px;
 }
