--- a/src/app/food-items/add-food-item/add-food-item.component.css
+++ b/src/app/food-items/add-food-item/add-food-item.component.css
@@ -1,13 +1,13 @@
 
 input.ng-touched.ng-invalid{
-    border-color: #dc3545;
+    border-color: #ff9000;
 }
  
 div.validation-error{
-    width: 100%;
+    width: 50%;
     margin-top: .25rem;
     font-size: 80%;
-    color: #dc3545;
+    color: #ff9000;
 }
  
 /* for table row hover - in employee-list component */
@@ -17,28 +17,28 @@ table.table-hover tbody tr:hover{
 
 .display-4{
     font-weight:bolder;
-    margin-left: 35%;
-    color: #0e0923;
-    margin-bottom: 4%;
+    margin-left: 30%;
+    color: #ff9000;
+    margin-bottom: 5%;
+    font-weight: bolder;
 }
 
 
-
-
 .form-control{
-    width: 45%;
-    height: 50px;
-    margin-left: 28%;
+    width: 80%;
+    height: 35px;
+    margin-left: 10%;
     margin-bottom: 0.5%;
     border-radius: 5px;
 }
 
 .btn{
-    background-color: orangered;
+    background-color: orange;
     color: white;
     font-weight: bolder;
     border-radius: 5px;
     margin-left: 45%;
+    width: 16%;
     height: 35px;
-    margin-top: 2%;
+    margin-top: 3%;
 }
