--- a/src/app/food-items/food-item/food-item.component.html
+++ b/src/app/food-items/food-item/food-item.component.html
@@ -8,11 +8,11 @@
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
-<body class="w3-light-grey">
+<body >
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-  <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
+  <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();">  Menu</button>
   <span class="w3-bar-item w3-right"><img src="/assets/logo.jpg" class="w3-margin-left" style="width:200px"></span>
 </div>
 
@@ -37,14 +37,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
     <a  [routerLink]="'/admin'"class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Dashboard</a>
     <a [routerLink]="'/foods'" class="w3-bar-item w3-button w3-padding" ><i class="fa fa-users fa-fw"></i>  Food Menu</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="attendanceLogin()"><i class="fa fa-eye fa-fw"></i>  Attendance</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="yearPlanLogin()"><i class="fa fa-bullseye fa-fw"></i>  Year Plan</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="adminForumLogin()"><i class="fa fa-book fa-fw"></i>  Forum</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="salaryLogin()"><i class="fa fa-bell fa-fw"></i>  Salary</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="feesLogin()"><i class="fa fa-bank fa-fw"></i>  Fees</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="leavesLogin()"><i class="fa fa-history fa-fw"></i> Leaves</a>
-    <a  class="w3-bar-item w3-button w3-padding" (click)="settingsLogin()"><i class="fa fa-cog fa-fw"></i>  Settings</a><br><br>
-  </div>
+   </div>
 </nav>
 
 
