--- a/src/app/food-items/add-food-item/add-food-item.component.html
+++ b/src/app/food-items/add-food-item/add-food-item.component.html
@@ -18,6 +18,7 @@
   
   <div class="form-group">
     <button type="submit" [disabled]="form.invalid" class="btn">Add</button>
+    <button  class="btn">Cancel</button>
   </div>
  
 </form>
