--- a/src/app/food-items/food-item/food-item.component.html
+++ b/src/app/food-items/food-item/food-item.component.html
@@ -11,9 +11,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <body >
 
 <!-- Top container -->
-<div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-  <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();">  Menu</button>
-  <span class="w3-bar-item w3-right"><img src="/assets/logo.jpg" class="w3-margin-left" style="width:200px"></span>
+<div class="w3-bar w3-top w3-large" style="z-index:4;background-color: #0e0923;height: 60px;" fxLayout="column" fxLayoutAlign= "center center">
+  <span class="w3-bar-item w3-right"><img class ="logo" src="/assets/images/logo.png" class="w3-margin-left" style="width:60px;height: 60px;"></span>
 </div>
 
 <!-- Sidebar/menu -->
@@ -45,13 +44,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px;margin-top:43px;">
+<div class="w3-main" style="margin-left:300px;margin-top:50px;">
   <div class="row">
-    <div class="col-md-3"><button (click)="onAdd()" class="add"mat-icon-button><mat-icon>add</mat-icon></button></div>
+    <div class="col-md-3" fxLayout="row"><h2 class="food-subhead">Food Menu</h2><button (click)="onAdd()" class="add"mat-icon-button><mat-icon>add</mat-icon></button></div>
     <div class="col-md-6"></div>
     <div class="col-md-3"></div>
   </div>
-  <hr style="border: 0.5px dashed #ff9000;">
+ 
  
   <app-list-food-item></app-list-food-item>
   
